--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
+    <a href="../index.html">Home</a>
+    <br>
+    <img src="../images/lasagna.jpg" alt="lasagna image" height="310" width="310">
+    <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Beef</li>
+        <li>Spaghetti sauce</li>
+        <li>Cheeses</li>
+        <li>Eggs</li>
+        <li>Seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Water</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer. </li>
+        <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+        <li>Assemble the lasagna according to the detailed recipe.</li>
+        <li>Bake, covered, for 45 minutes. </li>
+        <li>Uncover and continue baking for 10 minutes. </li>
+    </ol>
 </body>
 </html>
